Only close page 2.

--- a/fxos-contacts-sheets/app/page1.html
+++ b/fxos-contacts-sheets/app/page1.html
@@ -6,6 +6,6 @@
 </head>
 <body class="list">
 	<h1>Contact List</h1>
-	<a href="page2.html" data-click="suicide" target="next">Go To Page 2</a>
+	<a href="page2.html" target="next">Go To Page 2</a>
 </body>
 </html>
