--- a/fxos-contacts-sheets/app/page2.html
+++ b/fxos-contacts-sheets/app/page2.html
@@ -6,6 +6,6 @@
 </head>
 <body class="details">
 	<h1>Contact Details</h1>
-	<a href="page1.html" data-click="suicide" target="previous">Go To Page 1</a>
+	<a href="page1.html" data-click="suicide">Go To Page 1</a>
 </body>
 </html>
